<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/Theme.Passbolt.Toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.Passbolt.PopupOverlay"
        app:title="@string/transfer_details_title" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/transfer_details_header"
        android:textAppearance="@style/BodyText"
        android:textColor="@color/text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.passbolt.mobile.android.core.ui.text.CircleStepsView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <FrameLayout
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_200"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/background_qr_code_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_sample_qr_code" />
    </FrameLayout>

    <Button
        android:id="@+id/scanQrCodesButton"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_32"
        android:text="@string/transfer_details_scan_button"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
