<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Passbolt.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/Theme.Passbolt.Toolbar"
            app:popupTheme="@style/Theme.Passbolt.PopupOverlay">

            <TextView
                style="@style/ToolbarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/enter_passphrase_title" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/dp_96"
                android:layout_height="@dimen/dp_96"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_72"
                android:src="@drawable/ic_avatar_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                style="@style/Heading2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_horizontal"
                android:textColor="@color/text_primary"
                app:layout_constraintTop_toBottomOf="@+id/avatar"
                tools:text="John Smith" />

            <TextView
                android:id="@+id/email"
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center_horizontal"
                android:textColor="@color/text_secondary"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="John Smith" />

            <TextView
                android:id="@+id/url"
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center_horizontal"
                android:textColor="@color/text_secondary"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:text="John Smith" />

            <com.passbolt.mobile.android.core.ui.text.textinputfield.PasswordInputView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_32"
                app:inputHint="@string/enter_passphrase_password_hint"
                app:inputIsRequired="true"
                app:inputTitle="@string/enter_passphrase_password_title"
                app:layout_constraintTop_toBottomOf="@+id/url" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="1">

                <Button
                    android:id="@+id/signInButton"
                    style="@style/PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:backgroundTint="@color/button_selector"
                    android:enabled="false"
                    android:text="@string/enter_passphrase_sign_in_button" />

                <TextView
                    android:id="@+id/forgotPasswordButton"
                    style="@style/ButtonSmallText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_32"
                    android:background="?selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/dp_16"
                    android:text="@string/enter_passphrase_forgot_password_button" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
